#
# Copyright 2020-2022 Signal Messenger, LLC.
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "zkgroup"
version = "0.9.0"
authors = ["Signal Messenger LLC"]
edition = "2021"
description = "A zero-knowledge group library"
license = "AGPL-3.0-only"

[dependencies]
libsignal-core = { path = "../core" }
poksho = { path = "../poksho" }
signal-crypto = { path = "../crypto" }
zkcredential = { path = "../zkcredential", features = ["rayon"] }

# Use our fork of curve25519-dalek for zkgroup support.
curve25519-dalek-signal = { workspace = true, features = ["serde"] }

aes-gcm-siv = { workspace = true }
bincode = { workspace = true }
derive-where = { workspace = true }
displaydoc = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
hkdf = { workspace = true }
lazy_static = { workspace = true }
num_enum = { workspace = true }
partial-default = { workspace = true, features = ["derive"] }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

# For generation
base64 = { workspace = true, optional = true }

[dev-dependencies]
uuid = { workspace = true, features = ["v5"] }

# For benchmarking
criterion = { workspace = true }
test-case = { workspace = true }

[[bench]]
name = "zkgroup_benchmarks"
harness = false

[[bench]]
name = "serialization"
harness = false

[[bin]]
name = "generate_server_params"
required-features = ["base64"]

[[bin]]
name = "generate_generic_server_params"
required-features = ["base64"]
