#
# Copyright (C) 2020-2021 Signal Messenger, LLC.
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "libsignal-ffi"
version.workspace = true
authors.workspace = true
license.workspace = true
edition = "2021"

[lints]
workspace = true

[lib]
name = "signal_ffi"
crate-type = ["staticlib"]

[features]
# Testing the Swift side of this requires compiling with SIGNAL_MEDIA_SUPPORTED enabled for both Swift and C:
#     swift test -Xswiftc -DSIGNAL_MEDIA_SUPPORTED -Xcc -DSIGNAL_MEDIA_SUPPORTED
signal-media = ["libsignal-bridge/signal-media"]

[dependencies]
libsignal-bridge = { workspace = true, features = ["ffi"] }
libsignal-bridge-testing = { workspace = true, features = ["ffi"], optional = true }
libsignal-net = { workspace = true }
libsignal-protocol = { workspace = true }
signal-media = { workspace = true }

futures-util = { workspace = true }
log = { workspace = true }
log-panics = { workspace = true, features = ["with-backtrace"] }

[target.aarch64-apple-ios.dependencies]
cpufeatures = "0.2.1" # Make sure iOS gets optimized crypto.
