#
# Copyright (C) 2026 Signal Messenger, LLC.
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "libsignal-ffi"
version.workspace = true
authors.workspace = true
license.workspace = true
edition = "2024"

[lints]
workspace = true

[lib]
name = "signal_ffi"
crate-type = ["staticlib"]

[features]
# Testing the Swift side of this requires compiling with SIGNAL_MEDIA_SUPPORTED enabled for both Swift and C:
#     swift test -Xswiftc -DSIGNAL_MEDIA_SUPPORTED -Xcc -DSIGNAL_MEDIA_SUPPORTED
signal-media = ["libsignal-ffi-impl/signal-media"]

# Here for bridge_fn uniformity
ffi = []
default = ["ffi"]
metadata = ["libsignal-ffi-impl/metadata"]

libsignal-bridge-testing = ["libsignal-ffi-impl/libsignal-bridge-testing"]

[dependencies]
libsignal-ffi-impl = { path = "./impl", features = ["ffi"] }
log = { workspace = true } # Needed for feature selection

[target.aarch64-apple-ios.dependencies]
cpufeatures = "0.2.6" # Make sure iOS gets optimized crypto.
