#
# Copyright (C) 2020-2021 Signal Messenger, LLC.
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "libsignal-jni"
version = "0.62.0"
authors = ["Signal Messenger LLC"]
edition = "2021"
license = "AGPL-3.0-only"

[lints]
workspace = true

[lib]
name = "signal_jni"
crate-type = ["cdylib"]

[dependencies]
libsignal-bridge = { workspace = true, features = ["jni", "signal-media"] }
libsignal-protocol = { workspace = true }
signal-crypto = { workspace = true }

cfg-if = { workspace = true }
jni = { workspace = true }
log = { workspace = true }
log-panics = { workspace = true, features = ["with-backtrace"] }

[target.aarch64-linux-android.dependencies]
cpufeatures = "0.2.2" # Make sure 64-bit Android gets optimized crypto

[target.'cfg(target_os = "android")'.dependencies]
jni19 = { version = "0.19", package = "jni" }
rustls-platform-verifier = "0.3.1"
