#
# Copyright (C) 2020-2021 Signal Messenger, LLC.
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "libsignal-jni"
version = "0.65.6"
authors = ["Signal Messenger LLC"]
edition = "2021"
license = "AGPL-3.0-only"

[lints]
workspace = true

[lib]
name = "signal_jni"
crate-type = ["cdylib"]

[dependencies]
libsignal-jni-impl = { workspace = true }
