#
# Copyright (C) 2020-2021 Signal Messenger, LLC.
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "libsignal-jni"
version.workspace = true
authors.workspace = true
license.workspace = true
edition = "2021"

[lints]
workspace = true

[lib]
name = "signal_jni"
crate-type = ["cdylib"]

[dependencies]
libsignal-jni-impl = { workspace = true }
